sort.basic.bubble.AlgBubbleSort2.scala.error
Erreur de compilation :
AlgBubbleSort2:4: error: ')' expected but ',' found.
  for (i <- 0 to 3, i--) {
                  ^AlgBubbleSort2:8: error: illegal start of simple expression
} 
^